# order-service

./: .gitignore  Cargo.toml  README.md  build.rs
rpc/: Cargo.toml  build.rs  codec.rs
rpc/proto/order/: order.proto
rpc/src/: lib.rs
src/: codec.rs  db.rs  errors.rs  lib.rs  main.rs  model.rs
