[package]
name = "order-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.4.2" # Rust gRPC implementation
prost = "0.7.0" # Rust Protocol Buffers implementation
prost-types = "0.7.0" # Contains definitions of Protocol Buffers well-known types
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.8"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
rust-embed = "6.3.0"
futures = "0.3.19"
mongodb = "2.1.0"
derive_more = "0.99.17"

[build-dependencies]
tonic-build = "0.4.2"




